docker headers are generated. some example Dockerfiles are stored as examples